--- a/research.html
+++ b/research.html
@@ -94,7 +94,7 @@
 									to determine a system's projected spin-orbit angle. With additional information on the stellar inclination, 
 									the true 3D stellar obliquity can be derived as well.</p>
 									<header class="style1">
-										<h4>TOI-5143</h4>
+										<h4>Hot Jupiters in Compact Multi-planet Systems</h4>
 									</header>
 									<div>
 									    <img src="images/ajad9dd5f1_hr.jpg" width="1030" height="343" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
@@ -111,7 +111,7 @@
 									demonstrates that some hot Jupiters <em>must</em> have quiescent origins, having avoided achieving the large eccentricities
 									that would have otherwise destroyed their companions and/or excited their obliquities during their path to their close-in orbits.</p>
 									<header class="style1">
-										<h4>TOI-5126 and TOI-5398</h4>
+										<h4>Sub-Saturns in Compact Multi-planet Systems</h4>
 									</header>
 									<div>
 									    <img src="images/subSat_RMs.jpg" width="771" height="361" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
@@ -132,7 +132,7 @@
 								<br>
 								<article class="box post">
 									<header class="style1">
-										<h3>N-body Simulations of Short-Period Giant Systems</h3>
+										<h3>N-body Simulations of Short-Period Giants Embedded in Compact Multi-planet Systems</h3>
 									</header>
 								
 										In light of recent companion searches that have revealed a number of hot Jupiters with nearby companions
@@ -141,26 +141,27 @@
 									WASP-132 b; Hord et al. 2022) and TTV signal searches (Wu et al. 2023), it is plausible that hot Jupiters
 										in compact configurations are more common than we thought.</p>
 									<div>
-									    <img src="images/PRfgiant_Pfgiant_K11_color_final.jpg" width="550" height="450" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratio vs. Period" />
-									    <!--<p>Period ratio of giants with respect to their nearest companion as a function of period.</p>-->
+									    <img src="images/HJWJ_PRsImut.jpg" width="472" height="263" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratios and mutual inclinations of hot Jupiter vs. warm Jupiter companions." />
+									</div>
+									<div>
+									    <img src="images/HJWJ_detectability.jpg" width="476" height="265" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratios and mutual inclinations of hot Jupiter vs. warm Jupiter companions." />
 									</div>
 									
-									<p>To this end, I am leading a project to test the viability of quiescent formation pathways to produce hot Jupiters,
+									<p>To this end, I use N-body simulations to test the viability of quiescent formation pathways to produce hot Jupiters,
 										such as disk migration and in situ formation, from a purely dynamical perspective
 										using N-body simulations. In this work, we study and describe
 										the dynamical evolution of compact multi-planet systems containing a close-in gas giants at a range of
 										orbital periods.
 										We find that quiescent formation pathways for such giants
-										naturally reproduces several known observational properties, including
-										the higher nearby companion rate for warm Jupiters compared to hot Jupiters,
-										as well as a preference for interior small-planet companions.
-										This is illustrated qualiatively in the figure on the right, 
-										which shows the period ratios of our simulated Jupiters with their nearest low-mass
-										companion after nearly a billion orbits, where we see that hot giants are
-										much more isolated than warm giants, demonstrating that this outcome is not unique to 
-										high-eccentricity migration. Based on orbital architectures of our final systems,
-										which feature mutually inclined planets for hot Jupiters, we
-										posit that hot Jupiters may appear more lonely than they truly are in this origin scenario.
+										may naturally produce the hot Jupiter-warm Juptier companionship dichotomy, 
+										as hot Jupiters dynamically self-isolate relative to warm Jupiters, driving
+										significantly larger period ratios and mutual inclinations for their companion planets, which 
+										also end up being more difficult to detect via transits, transit timing variations, and radial velocities.
+										Additionally, we find that initially compact configurations can explain the architectures of hot Jupiters
+										with known nearby companions, which tend to reside on interior orbits.
+										While such origins may overpredict the companion multiplicity in such systems,
+										this work demonstrates that the preferential isolation of hot Jupiters is not unique to 
+										high-eccentricity migration.
 										Our paper (Radzom et al.) is under review for publication in ApJ.</p>
 								</article>
 								<br>
@@ -221,11 +222,7 @@
 										solid body atmospheres, climate evolution, and dynamic habitability.</p>
 										<div>
 									   <img src="images/cohort_pic_control_room.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
-											alt="My PSSS cohort picuted just outside of JPL mission control." />
-									</div>
-										<div>
-									   <img src="images/brandon_thunder_subsystem_role.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px; float: right"
-											alt="Picture of me holding my subsytem role plack in front of a whiteboard sketch of our mission concept, THUNDER, at JPL." />
+											alt="My PSSS cohort pictured just outside of JPL mission control." />
 									</div>
 										<p>As a Science Objective
 									Lead, I led the development of one of the mission's three science objectives, which seeks to identify and
