--- a/research.html
+++ b/research.html
@@ -141,8 +141,9 @@
 									WASP-132 b; Hord et al. 2022) and TTV signal searches (Wu et al. 2023), it is plausible that hot Jupiters
 										in compact configurations are more common than we thought.</p>
 									<div>
-									    <img src="images/HJWJ_PRsImut.jpg" width="472" height="263" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratios and mutual inclinations of hot Jupiter vs. warm Jupiter companions." />
+									    <img src="images/HJWJ_PRsImuts.jpg" width="472" height="263" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratios and mutual inclinations of hot Jupiter vs. warm Jupiter companions." />
 									</div>
+									<br>
 									<div>
 									    <img src="images/HJWJ_detectability.jpg" width="476" height="265" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratios and mutual inclinations of hot Jupiter vs. warm Jupiter companions." />
 									</div>
@@ -152,7 +153,7 @@
 										using N-body simulations. In this work, we study and describe
 										the dynamical evolution of compact multi-planet systems containing a close-in gas giants at a range of
 										orbital periods.
-										We find that quiescent formation pathways for such giants
+										As shown in the figures on the right, we find that quiescent formation pathways for such giants
 										may naturally produce the hot Jupiter-warm Juptier companionship dichotomy, 
 										as hot Jupiters dynamically self-isolate relative to warm Jupiters, driving
 										significantly larger period ratios and mutual inclinations for their companion planets, which 
