--- a/research.html
+++ b/research.html
@@ -141,11 +141,7 @@
 									WASP-132 b; Hord et al. 2022) and TTV signal searches (Wu et al. 2023), it is plausible that hot Jupiters
 										in compact configurations are more common than we thought.</p>
 									<div>
-									    <img src="images/HJWJ_PRsImuts.jpg" width="472" height="263" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratios and mutual inclinations of hot Jupiter vs. warm Jupiter companions." />
-									</div>
-									<br>
-									<div>
-									    <img src="images/HJWJ_detectability.jpg" width="476" height="265" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratios and mutual inclinations of hot Jupiter vs. warm Jupiter companions." />
+									    <img src="images/HJWJ_companions.jpg" width="695" height="718" align="right" style="margin: 0px 0px 0px 10px;" alt="Period ratios, mutual inclinations, and detectability of hot Jupiter vs. warm Jupiter companions." />
 									</div>
 									
 									<p>To this end, I use N-body simulations to test the viability of quiescent formation pathways to produce hot Jupiters,
@@ -158,12 +154,18 @@
 										as hot Jupiters dynamically self-isolate relative to warm Jupiters, driving
 										significantly larger period ratios and mutual inclinations for their companion planets, which 
 										also end up being more difficult to detect via transits, transit timing variations, and radial velocities.
-										Additionally, we find that initially compact configurations can explain the architectures of hot Jupiters
-										with known nearby companions, which tend to reside on interior orbits.
-										While such origins may overpredict the companion multiplicity in such systems,
+										Additionally, this paradigm can also explain the architectures of hot Jupiters
+										with known nearby companions, which tend to reside on interior orbits to longer-period hot Jupiters.
+										While such a model may overpredict the companion multiplicity in such systems,
 										this work demonstrates that the preferential isolation of hot Jupiters is not unique to 
-										high-eccentricity migration.
+										high-eccentricity migration, and instead can be a consequence of disparate dynamical histories
+										for giants in the innermost vs. outer regions of multi-planet systems. Future 
+										RV searches for small, mutually inclined outer companions to hot Jupiters can 
+										provide insight into the prevalence of initially compact configurations for these close-in giants.
 										Our paper (Radzom et al.) is under review for publication in ApJ.</p>
+										<div>
+									    <img src="images/PRs_nearestcomps.jpg" width="622" height="399" align="left" style="margin: 0px 0px 0px 10px;" alt="Period ratios and mutual inclinations of the nearest companions to our giant planets." />
+										</div>
 								</article>
 								<br>
 								<br>
