--- a/about.html
+++ b/about.html
@@ -47,11 +47,22 @@
 										<h2>My Formation History</h2>
 										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
 									</header>
+									<p>I grew up in the Twin Cities metro area in Minnesota, where I fell in love with 
+									the night sky, hiking, cross-country skiing, and especially, long-distance running. For my undergraduate
+									education, I attended the University of Wisconsin - Madison (go Badgers!), which gave me 
+										the opportunity to grow my running hobby and also earn a degree in Astrophysics (best of both worlds!).
+										About mid-way through my degree, I transitioned from Club running to half and full marathons. I also
+										started going on a lot of trips to National Parks (hoping to visit them all some day?).
+									</p>
+									<p>After graduating, I extended my tenure in the midwest by moving to Bloomington, Indiana
+									to pursue a PhD in Astronomy. After being limited to a virtual race experience for the 2020
+									Boston marathon, I finally re-qualified and ran the 2025 Boston marathon - in Boston (and it was 
+										a blast)! The somewhat warmer climate of southern Indiana left me itching for a winter activity,
+									so I also picked up climbing and recreational league ultimate frisbee. If you're ever in the Bloomington area,
+									and need some running recommendations (or a running pal!), feel free to reach out!</p>
+									<p>Most importantly, I adopted a very silly but sweet orange cat named Kylo in 2024 (yes, I would like
+										to see pictures of your cat as well).</p>
 									
-									<header class="style1">
-										<h2>Hobbies</h2>
-										<!--<p>Tempus feugiat veroeros sed nullam dolore</p>-->
-									</header>
 									
 								</article>
 							</div>
