--- a/research.html
+++ b/research.html
@@ -77,12 +77,12 @@
 									</header>
 									<header class="style1">
 										<h4>Papers:</h4>
-										<h4><ul>
-											  <li><a href="https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract">https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract</a></li>
-											  <li><a href="https://ui.adsabs.harvard.edu/abs/2024AJ....168..116R/abstract">https://ui.adsabs.harvard.edu/abs/2024AJ....168..116R/abstract</a></li>
-											  <li><a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...959L...5L/abstract">https://ui.adsabs.harvard.edu/abs/2023ApJ...959L...5L/abstract</a></li>
-											<li><a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...926L...8W/abstract">https://ui.adsabs.harvard.edu/abs/2022ApJ...926L...8W/abstract</a></li>
-											</ul></h4>
+										<ul>
+										  <li><h4><a href="https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract" target="_blank">https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract</a></h4></li>
+										  <li><h4><a href="https://ui.adsabs.harvard.edu/abs/2024AJ....168..116R/abstract" target="_blank">https://ui.adsabs.harvard.edu/abs/2024AJ....168..116R/abstract</a></h4></li>
+										  <li><h4><a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...959L...5L/abstract" target="_blank">https://ui.adsabs.harvard.edu/abs/2023ApJ...959L...5L/abstract</a></h4></li>
+										  <li><h4><a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...926L...8W/abstract" target="_blank">https://ui.adsabs.harvard.edu/abs/2022ApJ...926L...8W/abstract</a></h4></li>
+										</ul>
 									</header>
 									<p>Stellar obliquity, or the angle between the stellar spin axis and the orbit normal axis of its planet(s), is a unqiue
 									and informative indicator of a system's dynamical history. Despite decades of effort, it remains unclear whether
