--- a/research.html
+++ b/research.html
@@ -78,6 +78,11 @@
 									<header class="style1">
 										<h4>Papers:</h4>
 										<ul>
+											<li></li><a href="https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract">
+										    <div class="linkcls">
+										         <h2>https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract</h2>
+										    </div>
+										</a></li>
 										  <li><h4><a href="https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract" target="_blank">https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract</a></h4></li>
 										  <li><h4><a href="https://ui.adsabs.harvard.edu/abs/2024AJ....168..116R/abstract" target="_blank">https://ui.adsabs.harvard.edu/abs/2024AJ....168..116R/abstract</a></h4></li>
 										  <li><h4><a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...959L...5L/abstract" target="_blank">https://ui.adsabs.harvard.edu/abs/2023ApJ...959L...5L/abstract</a></h4></li>
