--- a/research.html
+++ b/research.html
@@ -78,9 +78,9 @@
 									<header class="style1">
 										<h4>Papers:</h4>
 										<ul>
-											<li></li><a href="https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract">
+											<li><a href="https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract">
 										    <div class="linkcls">
-										         <h2>https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract</h2>
+										         <h4>https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract</h4>
 										    </div>
 										</a></li>
 										  <li><h4><a href="https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract" target="_blank">https://ui.adsabs.harvard.edu/abs/2025AJ....169..189R/abstract</a></h4></li>
