--- a/research.html
+++ b/research.html
@@ -239,6 +239,14 @@
 									<header class="style1">
 										<h3>THUNDER: A Titan orbiter mission concept for NASA's New Frontiers program</h3>
 									</header>
+									<header class="style1">
+										<h4>Papers:</h4>
+										<h4><a href="https://ui.adsabs.harvard.edu/abs/2025PSJ.....6...45S/abstract" target="_blank">
+										    <div class="linkcls">
+										         <h4>https://ui.adsabs.harvard.edu/abs/2025PSJ.....6...45S/abstract</h4>
+										    </div>
+										</a></h4>
+									</header>
 									<div>
 									    <img src="images/THUNDERlogo.jpeg" width="200" height="200" align="left" style="margin: 0px 20px 0px 0px;" alt="" />
 									</div>
@@ -294,6 +302,14 @@
 									<header class="style1">
 										<h2>X-ray Sources in the SSA22 Field</h2>
 										<p>2019-2022</p>
+									</header>
+									<header class="style1">
+										<h4>Papers:</h4>
+										<h4><a href="https://ui.adsabs.harvard.edu/abs/2022ApJ...940..114R/abstract" target="_blank">
+										    <div class="linkcls">
+										         <h4>https://ui.adsabs.harvard.edu/abs/2022ApJ...940..114R/abstract</h4>
+										    </div>
+										</a></h4>
 									</header>
 									<div>
 									    <img src="images/AGN_upres.jpg" width="500" height="281" align="right" style="margin: 0px 0px 0px 20px;" alt="" />
