--- a/outreach.html
+++ b/outreach.html
@@ -91,7 +91,7 @@
 						which is why we have transitioned to making all materials available in a public
 						GitHub repository, which is accessible here:
 						<a href=https://github.com/BrandonRadzom/pyiu>github.com/BrandonRadzom/pyiu</a>. We were also recently awarded
-						funding from NASA's <a href=https://insgc.spacegrant.org/>Indiana Space Grant></a> program (for FY2026, PIs: Brandon Radzom & Samir Salim) to support PyIU's expansion to high school students from rural communities
+						funding from NASA's <a href=https://insgc.spacegrant.org/>Indiana Space Grant</a> program (for FY2026, PIs: Brandon Radzom & Samir Salim) to support PyIU's expansion to high school students from rural communities
 						throughout Sout-Central Indiana.</p>
 						
 						<p>Media:
