--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<!--<figcaption>Standing above the fully-assembled Europa Clipper spacecraft at NASA's Jet 
 								Propulsion Laboratory, August 2023.</figcaption>-->
 						</aside>
-						<p class="style1">I'm a native midwesterner and when not doing science, I am likely on my feet either hiking, running,
+						<p class="style1">I'm a proud midwesterner and when not doing science, I am likely on my feet either hiking, running,
 							climbing, or playing ultimate frisbee (more about me <a href="https://brandonradzom.github.io/about.html">here</a>).</p>
 						<!--<p class="style2">
 							Big text
