Insert images test
Added images and captions to enhance the about page.

--- a/about.html
+++ b/about.html
@@ -54,6 +54,22 @@
 										About mid-way through my degree, I transitioned from Club running to half and full marathons. I also
 										started going on a lot of trips to National Parks (hoping to visit them all some day?).
 									</p>
+									<br>
+									<div>
+						   <img src="images/paddle_boarding.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+								alt="Paddle boarding on a Minnesota lake." />
+						</div>
+						
+						<div>
+						   <img src="images/tetons_lake.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+								alt="Grand Teton mountain range with a lake in the foreground." />
+						</div>
+						<figure>
+						   <img src="images/tetons_creek.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px;"
+														alt="A creek running through a narrow valley in the Teton mountains." />
+						    <figcaption>Testing</figcaption>
+						</figure>
+									<br>
 									<p>After graduating, I extended my tenure in the midwest by moving to Bloomington, Indiana
 									to pursue a PhD in Astronomy. After being limited to a virtual race experience for the 2020
 									Boston marathon, I finally re-qualified and ran the 2025 Boston marathon - in Boston (and it was 
