Revise image sizes and add new photos
Updated image dimensions and alignment for better layout. Added additional images and adjusted text for clarity.

--- a/about.html
+++ b/about.html
@@ -52,30 +52,46 @@
 									education, I attended the University of Wisconsin - Madison (go Badgers!), which gave me 
 										the opportunity to grow my running hobby and also earn a degree in Astrophysics (best of both worlds!).
 										About mid-way through my degree, I transitioned from Club running to half and full marathons. I also
-										started going on a lot of trips to National Parks (hoping to visit them all some day?).
+										started going on a lot of trips to National Parks (hoping to visit them all some day?). I've featured a
+										selection of some of my favorite photos from these trips below!
 									</p>
 									<br>
 									<div>
-						   <img src="images/paddle_boarding.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+						   <img src="images/paddle_boarding.jpg" width="320" height="240" align="right" style="margin: 10px 20px 10px 20px; float: left"
 								alt="Paddle boarding on a Minnesota lake." />
 						</div>
 						
 						<div>
-						   <img src="images/tetons_lake.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+						   <img src="images/tetons_lake.jpg" width="320" height="240" align="right" style="margin: 10px 20px 10px 20px; float: left"
 								alt="Grand Teton mountain range with a lake in the foreground." />
 						</div>
-						<figure>
-						   <img src="images/tetons_creek.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px;"
+
+						<div>
+						   <img src="images/tetons_creek.jpg" width="320" height="240" align="left" style="margin: 10px 20px 10px 20px; float: left"
 														alt="A creek running through a narrow valley in the Teton mountains." />
-						    <figcaption>Testing</figcaption>
-						</figure>
+						</div>
+									<br>
+						<div>
+						   <img src="images/frozen_lake.jpg" width="320" height="240" align="right" style="margin: 10px 20px 10px 20px; float: left"
+								alt="A frozen lake amidst the Rocky Mountains." />
+						</div>
+
+						<div>
+						   <img src="images/stlouis_arch_landscape.jpg" width="320" height="240" align="left" style="margin: 10px 20px 10px 20px; float: left"
+														alt="The St. Louis Arch - yes, it's a National Park." />
+						</div>
+
+						<div>
+						   <img src="images/yellowstone_canyon.jpg" width="320" height="240" align="left" style="margin: 10px 20px 10px 20px; float: left"
+														alt="The 'Grand Canyon' of Yellowstone National Park." />
+						</div>
 									<br>
 									<p>After graduating, I extended my tenure in the midwest by moving to Bloomington, Indiana
 									to pursue a PhD in Astronomy. After being limited to a virtual race experience for the 2020
 									Boston marathon, I finally re-qualified and ran the 2025 Boston marathon - in Boston (and it was 
 										a blast)! The somewhat warmer climate of southern Indiana left me itching for a winter activity,
 									so I also picked up climbing and recreational league ultimate frisbee. If you're ever in the Bloomington area,
-									and need some running recommendations (or a running pal!), feel free to reach out!</p>
+									and need some running recommendations, or a running pal, feel free to reach out!</p>
 									<p>Most importantly, I adopted a very silly but sweet orange cat named Kylo in 2024 (yes, I would like
 										to see pictures of your cat as well).</p>
 									
