--- a/about.html
+++ b/about.html
@@ -92,10 +92,29 @@
 										a blast)! The somewhat warmer climate of southern Indiana left me itching for a winter activity,
 									so I also picked up climbing and recreational league ultimate frisbee. If you're ever in the Bloomington area,
 									and need some running recommendations, or a running pal, feel free to reach out!</p>
+									<br>
+									<div>
+						   <img src="images/indy_running" width="320" height="320" align="right" style="margin: 10px 20px 10px 20px; float: left"
+								alt="About a mile to go to finish the 2023 Indianapolis Monumental Marathon." />
+						</div>
+
+						<div>
+						   <img src="images/boston_finisher.jpg" width="240" height="320" align="left" style="margin: 10px 20px 10px 20px; float: left"
+														alt="At the finish of the 2025 Boston Marathon." />
+						</div>
+									<br>
 									<p>Most importantly, I adopted a very silly but sweet orange cat named Kylo in 2024 (yes, I would like
 										to see pictures of your cat as well).</p>
-									
-									
+
+									<div>
+						   <img src="images/holding_kylo" width="240" height="320" align="right" style="margin: 10px 20px 10px 20px; float: left"
+								alt="My first time holding Kylo after adopting him." />
+						</div>
+
+						<div>
+						   <img src="images/kylo.jpg" width="320" height="240" align="left" style="margin: 10px 20px 10px 20px; float: left"
+														alt="Kylo giving a silly face." />
+						</div>
 								</article>
 							</div>
 
