Fix image source paths and clean up HTML

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 										started going on a lot of trips to National Parks (hoping to visit them all some day?). I've featured a
 										selection of some of my favorite photos from these trips below!
 									</p>
-									<br>
+					
 									<div>
 						   <img src="images/paddle_boarding.jpg" width="320" height="240" align="right" style="margin: 10px 20px 10px 20px; float: left"
 								alt="Paddle boarding on a Minnesota lake." />
@@ -86,7 +86,7 @@
 														alt="The 'Grand Canyon' of Yellowstone National Park." />
 						</div>
 									<br>
-									<br>
+									<p></p>
 									<p>After graduating, I extended my tenure in the midwest by moving to Bloomington, Indiana
 									to pursue a PhD in Astronomy. After being limited to a virtual race experience for the 2020
 									Boston marathon, I finally re-qualified and ran the 2025 Boston marathon - in Boston (and it was 
@@ -95,7 +95,7 @@
 									and need some running recommendations, or a running pal, feel free to reach out!</p>
 									<br>
 									<div>
-						   <img src="images/indy_running" width="320" height="320" align="right" style="margin: 10px 20px 10px 20px; float: left"
+						   <img src="images/indy_running.jpg" width="320" height="320" align="right" style="margin: 10px 20px 10px 20px; float: left"
 								alt="About a mile to go to finish the 2023 Indianapolis Monumental Marathon." />
 						</div>
 
@@ -106,9 +106,9 @@
 									<br>
 									<p>Most importantly, I adopted a very silly but sweet orange cat named Kylo in 2024 (yes, I would like
 										to see pictures of your cat as well).</p>
-
+<br>
 									<div>
-						   <img src="images/holding_kylo" width="240" height="320" align="right" style="margin: 10px 20px 10px 20px; float: left"
+						   <img src="images/holding_kylo.jpg" width="240" height="320" align="right" style="margin: 10px 20px 10px 20px; float: left"
 								alt="My first time holding Kylo after adopting him." />
 						</div>
 
