Fix paragraph styling in about.html

--- a/about.html
+++ b/about.html
@@ -86,8 +86,8 @@
 														alt="The 'Grand Canyon' of Yellowstone National Park." />
 						</div>
 									<br>
-									<p></p>
-									<p>After graduating, I extended my tenure in the midwest by moving to Bloomington, Indiana
+							
+									<p style="clear: left;">After graduating, I extended my tenure in the midwest by moving to Bloomington, Indiana
 									to pursue a PhD in Astronomy. After being limited to a virtual race experience for the 2020
 									Boston marathon, I finally re-qualified and ran the 2025 Boston marathon - in Boston (and it was 
 										a blast)! The somewhat warmer climate of southern Indiana left me itching for a winter activity,
@@ -104,7 +104,7 @@
 														alt="At the finish of the 2025 Boston Marathon." />
 						</div>
 									<br>
-									<p>Most importantly, I adopted a very silly but sweet orange cat named Kylo in 2024 (yes, I would like
+									<p style="clear: left;">Most importantly, I adopted a very silly but sweet orange cat named Kylo in 2024 (yes, I would like
 										to see pictures of your cat as well).</p>
 <br>
 									<div>
