Fix paragraph formatting near picture

--- a/research.html
+++ b/research.html
@@ -123,7 +123,7 @@
 									    <img src="images/ajad9dd5f1_hr.jpg" width="1030" height="343" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
 									</div>
 									<br>
-									<p>TOI-5143 c is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
+									<p style="clear: left;">TOI-5143 c is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
 										mission and confirmed by Quinn et al., in prep., and is only the <em>third</em> of such systems to have its stellar obliquity
 										measured. In my recent analysis of this system, we employ Bayesian Inference and the Doppler Shadow
 									technique to measure its stellar obliquity via the RM effect, finding it is well-aligned. Our result continues the trend of alignemnt 
